Fixed bug on iphoneX which caused horizontal overflow.

--- a/css/index.css
+++ b/css/index.css
@@ -39,6 +39,11 @@ body{
 .container-fullwidth{
     border-bottom: 5px solid var(--sky_blue);
 }
+.icons{
+    font-size:69px; 
+    color: #3AAFA9; 
+    padding: 16px;
+}
 h1{
     text-align: center;
     color:white;
@@ -283,47 +288,7 @@ a:hover{
     }
     
 }
-@media only screen and (max-width: 1000px){
 
-
-
-
-    .website{
-  
-        display: grid;
-        grid-template-rows: 1fr 1fr;
-        grid-template-columns: 1fr 1fr;
-        padding:36px;
-    
-    }
-    .cell-1{
-        border-radius: 10px;
-        grid-row: 1;
-        grid-column: 1;
-      
-    }
-    .cell-2{
-        border-radius: 10px;
-        grid-row: 1;
-        grid-column: 2;
-    
-    }
-    .cell-3{
-        border-radius: 10px;
-        grid-row: 2;
-        grid-column: 1;
-    
-    }
-    .cell-4{
-        border-radius: 10px;
-        grid-row: 2;
-        grid-column: 2;
-    
-    }
-    .about{
-        display: inline-block;
-    }
-}
 .contact{
     margin-top: 30px;
 
@@ -348,4 +313,21 @@ a:hover{
     border-color: var(--sky_blue);
     color: white;
     width: 160px;
+}
+
+@media only screen and (max-width: 1000px){
+
+
+
+    
+    .about{
+        display: inline-block;
+    }
+    .pdesk{
+       
+        width: 90vw;
+    }
+    .description{
+        margin: 0px;
+    }
 }
